// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubNavList styles should render with default styles when there is a selected child 1`] = `
.circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
}

.circuit-0::after {
  content: '';
  width: 2px;
  background: #3388FF;
  height: 32px;
  border-radius: 1px;
  position: absolute;
  top: calc(32px * 1);
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.circuit-0::before {
  content: '';
  width: 2px;
  background: #5C656F;
  height: calc(32px * 2);
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul
  className="circuit-0 circuit-1"
>
  <li
    secondary={true}
    visible={false}
  >
    Item 1
  </li>
  <li
    secondary={true}
    selected={true}
    visible={false}
  >
    Item 2
  </li>
</ul>
`;

exports[`SubNavList styles should render with default styles when there is no selected child 1`] = `
.circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
}

.circuit-0::before {
  content: '';
  width: 2px;
  background: #5C656F;
  height: calc(32px * 2);
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul
  className="circuit-0 circuit-1"
>
  <li
    secondary={true}
    visible={false}
  >
    Item 1
  </li>
  <li
    secondary={true}
    visible={false}
  >
    Item 2
  </li>
</ul>
`;

exports[`SubNavList styles should render without children 1`] = `
.circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
}

.circuit-0::after {
  content: '';
  width: 2px;
  background: #3388FF;
  height: 32px;
  border-radius: 1px;
  position: absolute;
  top: calc(32px * 0);
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

<ul
  className="circuit-0 circuit-1"
/>
`;
